// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: ReviewList component should render ReviewForm 1`] = `
<section
  className="property__reviews reviews"
>
  <h2
    className="reviews__title"
  >
    Reviews · 
    <span
      className="reviews__amount"
    >
      1
    </span>
  </h2>
  <ul
    className="reviews__list"
  >
    <Review
      date="2020-04-04"
      id="4"
      key="4"
      rating={4}
      text="Good"
      user={
        Object {
          "name": "User",
          "photo": "photo",
        }
      }
    />
  </ul>
  <WithReviewData
    onSubmit={[Function]}
  />
</section>
`;

exports[`snapshot test: ReviewList component should render correctly 1`] = `
<section
  className="property__reviews reviews"
>
  <h2
    className="reviews__title"
  >
    Reviews · 
    <span
      className="reviews__amount"
    >
      1
    </span>
  </h2>
  <ul
    className="reviews__list"
  >
    <Review
      date="2020-04-04"
      id="4"
      key="4"
      rating={4}
      text="Good"
      user={
        Object {
          "name": "User",
          "photo": "photo",
        }
      }
    />
  </ul>
</section>
`;
